.prelude/i-effect/repos/tsgo/testdata/baselines/reference/effect-v3/missingEffectContext_returnSignature.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/missingEffectContext_returnSignature.ts(20,3): error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceA | ServiceB | ServiceC`. effect(missingEffectContext)
/.src/missingEffectContext_returnSignature.ts(24,63): error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceA | ServiceB | ServiceC`. effect(missingEffectContext)
/.src/missingEffectContext_returnSignature.ts(28,3): error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceC`. effect(missingEffectContext)


==== /.src/missingEffectContext_returnSignature.ts (3 errors) ====
    // @effect-v3
    import * as Effect from "effect/Effect"
    
    class ServiceA extends Effect.Service<ServiceA>()("ServiceA", {
      succeed: { a: 1 }
    }) {}
    
    class ServiceB extends Effect.Service<ServiceB>()("ServiceB", {
      succeed: { a: 2 }
    }) {}
    
    class ServiceC extends Effect.Service<ServiceC>()("ServiceC", {
      succeed: { a: 3 }
    }) {}
    
    declare const effectWithServices: Effect.Effect<number, never, ServiceA | ServiceB | ServiceC>
    
    export function testFn(): Effect.Effect<number> {
      // @ts-expect-error
      return effectWithServices
      ~~~~~~
!!! error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceA | ServiceB | ServiceC`. effect(missingEffectContext)
    }
    
    // @ts-expect-error
    export const conciseBody: () => Effect.Effect<number> = () => effectWithServices
                                                                  ~~~~~~~~~~~~~~~~~~
!!! error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceA | ServiceB | ServiceC`. effect(missingEffectContext)
    
    export const conciseBodyMissingServiceC: () => Effect.Effect<number, never, ServiceA | ServiceB> = () =>
      // @ts-expect-error
      effectWithServices
      ~~~~~~~~~~~~~~~~~~
!!! error TS377004: This Effect requires a service that is missing from the expected Effect context: `ServiceC`. effect(missingEffectContext)
    
